# news-digest

./: .gitignore  ASYNC_FIX.md  Makefile  PLAYWRIGHT_INTEGRATION.md  README.md  index.html  pyproject.toml  test_playwright_fallback.py
news_digest/core/: chess_players.py  handler.py  hn.py  reddit.py  rss.py  telegram.py
news_digest/utils/: util.py
scripts/: get_refresh_token.py  handler.py  hn.py  lambda_logs.sh  main.py  reddit.py  rss.py  setup_cron.sh  telegram.py  util.py
tests/: README.md  test_telegram.py
